# MCP_rag_agent

./: .dockerignore  .gitignore  Dockerfile  README.md  crawled_pages.sql  pyproject.toml
frontend/: app.py  requirements.txt
src/: api_server.py  crawl4ai_mcp.py  todo.txt  utils.py
